// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createLatestEventStaff:feat:onHasLatestEvent 1`] = `
[
  {
    "content": "",
    "created_at": 1683187195000,
    "id": "1",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
  undefined,
]
`;

exports[`createLatestEventStaff:feat:onHasLatestEvent 2`] = `
[
  {
    "content": "",
    "created_at": 1683187195000,
    "id": "1",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
]
`;

exports[`createLatestEventStaff:feat:onHasLatestEventOnce 1`] = `
[
  {
    "content": "",
    "created_at": 1683187195000,
    "id": "1",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
  undefined,
]
`;

exports[`createLatestEventStaff:feat:onHasLatestEventOnce 2`] = `
[
  {
    "content": "",
    "created_at": 1683187195000,
    "id": "1",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
]
`;

exports[`createLatestEventStaff:feat:onHasLatestEventOnce 3`] = `
[
  {
    "content": "更新",
    "created_at": 1683187195001,
    "id": "3",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
  undefined,
]
`;

exports[`createLatestEventStaff:feat:onHasLatestEventOnce 4`] = `
[
  {
    "content": "更新",
    "created_at": 1683187195001,
    "id": "3",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
  undefined,
]
`;

exports[`createLatestEventStaff:feat:onUpdated 2`] = `
[
  {
    "content": "",
    "created_at": 1683187195000,
    "id": "1",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
  undefined,
]
`;

exports[`createLatestEventStaff:feat:onUpdated 3`] = `
[
  {
    "content": "3",
    "created_at": 1683187195001,
    "id": "3",
    "kind": 3,
    "pubkey": "p",
    "sig": "33",
    "tags": [],
  },
  undefined,
]
`;
